objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Codigo_de_producto__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo de producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN__c</fullName>
        <formula>image(&quot;http://www.barcodesinc.com/generator/image.php?code=&quot; &amp;  PricebookEntry.Product2.ProductCode  &amp; &quot;&amp;style=164&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=1&quot;,&quot;Codigo de barras&quot;,50,150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>